DEX-27861 | fix: add spacing on mobile

--- a/_src/blocks/accordion/accordion.css
+++ b/_src/blocks/accordion/accordion.css
@@ -2,8 +2,3 @@
 .section.accordion-container {
   padding: 0;
 }
-
-.section.accordion-container.awards-search-container label {
-  display: flex;
-  justify-self: flex-start;
-}
